fix stage css bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,6 +6,13 @@
 	color: #A02615;
 	font-weight: bold;
 }
+
+#stage {
+	height: 100%;
+	width: 100%;
+	position: relative;
+}
+
 #content {
 	background: white;
 	color: #A02615;
